// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayParser matches expected output: argumentDefinitions-with-typo.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment TestFragment on User @argumentDefinitions(
  id: {type: "ID", nonNull: true}
  size: {type: "[Int]", defaultValu: [100]} # uh-oh, typo
) {
  ...Foo @arguments(size: $size)
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
ERROR:
Error: RelayParser: Encountered 1 error(s):
- Expected definition for variable '$size' to be an object with the following shape: '{type: string, defaultValue?: mixed, nonNull?: boolean, list?: boolean}', got unknown key(s) 'defaultValu'.
  
  GraphQL request (3:3)
  2:   id: {type: "ID", nonNull: true}
  3:   size: {type: "[Int]", defaultValu: [100]} # uh-oh, typo
       ^
  4: ) {
  
`;

exports[`RelayParser matches expected output: client-fields.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query BestFriendsQuery($id: ID!) {
  node(id: $id) {
    ...BestFriends
  }
}

fragment BestFriends on User {
  # this is the only field that is part of the base schema
  id
  # fields defined in type extensions are skipped
  best_friends {
    edges {
      cursor
      node {
        id
      }
    }
    pageInfo {
      hasNextPage
    }
  }
  ... on Node {
   # fragments on extension types are skipped
    ...FooFragment
    ... on Foo {
      id
    }
  }
}

fragment FooFragment on Foo {
  id
}

extend type User {
  best_friends: FriendsConnection
}

type Foo {
  id: ID!
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "BestFriendsQuery",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "id",
        "type": "ID!",
        "defaultValue": null
      }
    ],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "id",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "id",
              "type": "ID"
            },
            "type": "ID"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "node",
        "selections": [
          {
            "kind": "FragmentSpread",
            "args": [],
            "metadata": null,
            "name": "BestFriends",
            "directives": []
          }
        ],
        "type": "Node"
      }
    ],
    "type": "Query"
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "BestFriends",
    "selections": [
      {
        "kind": "ScalarField",
        "alias": null,
        "args": [],
        "directives": [],
        "metadata": null,
        "name": "id",
        "type": "ID!"
      },
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [],
        "directives": [],
        "metadata": null,
        "name": "best_friends",
        "selections": [
          {
            "kind": "LinkedField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "edges",
            "selections": [
              {
                "kind": "ScalarField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "cursor",
                "type": "String"
              },
              {
                "kind": "LinkedField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "node",
                "selections": [
                  {
                    "kind": "ScalarField",
                    "alias": null,
                    "args": [],
                    "directives": [],
                    "metadata": null,
                    "name": "id",
                    "type": "ID!"
                  }
                ],
                "type": "User"
              }
            ],
            "type": "[FriendsEdge]"
          },
          {
            "kind": "LinkedField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "pageInfo",
            "selections": [
              {
                "kind": "ScalarField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "hasNextPage",
                "type": "Boolean"
              }
            ],
            "type": "PageInfo"
          }
        ],
        "type": "FriendsConnection"
      },
      {
        "kind": "InlineFragment",
        "directives": [],
        "metadata": null,
        "selections": [
          {
            "kind": "FragmentSpread",
            "args": [],
            "metadata": null,
            "name": "FooFragment",
            "directives": []
          },
          {
            "kind": "InlineFragment",
            "directives": [],
            "metadata": null,
            "selections": [
              {
                "kind": "ScalarField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "id",
                "type": "ID!"
              }
            ],
            "typeCondition": "Foo"
          }
        ],
        "typeCondition": "Node"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "FooFragment",
    "selections": [
      {
        "kind": "ScalarField",
        "alias": null,
        "args": [],
        "directives": [],
        "metadata": null,
        "name": "id",
        "type": "ID!"
      }
    ],
    "type": "Foo",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: directive-generic.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment TestFragment on User {
  id @customDirective(level: 11)
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "TestFragment",
    "selections": [
      {
        "kind": "ScalarField",
        "alias": null,
        "args": [],
        "directives": [
          {
            "kind": "Directive",
            "metadata": null,
            "name": "customDirective",
            "args": [
              {
                "kind": "Argument",
                "metadata": null,
                "name": "level",
                "value": {
                  "kind": "Literal",
                  "metadata": null,
                  "value": 11
                },
                "type": "Int!"
              }
            ]
          }
        ],
        "metadata": null,
        "name": "id",
        "type": "ID!"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: directive-include.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment TestFragment on User {
  id @include(if: $Cond)
  ... on User @include(if: $Cond) {
    firstName
  }
  ...Foo @include(if: $Cond)
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "TestFragment",
    "selections": [
      {
        "kind": "Condition",
        "condition": {
          "kind": "Variable",
          "metadata": null,
          "variableName": "Cond",
          "type": "Boolean!"
        },
        "metadata": null,
        "passingValue": true,
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "id",
            "type": "ID!"
          }
        ]
      },
      {
        "kind": "Condition",
        "condition": {
          "kind": "Variable",
          "metadata": null,
          "variableName": "Cond",
          "type": "Boolean!"
        },
        "metadata": null,
        "passingValue": true,
        "selections": [
          {
            "kind": "InlineFragment",
            "directives": [],
            "metadata": null,
            "selections": [
              {
                "kind": "ScalarField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "firstName",
                "type": "String"
              }
            ],
            "typeCondition": "User"
          }
        ]
      },
      {
        "kind": "Condition",
        "condition": {
          "kind": "Variable",
          "metadata": null,
          "variableName": "Cond",
          "type": "Boolean!"
        },
        "metadata": null,
        "passingValue": true,
        "selections": [
          {
            "kind": "FragmentSpread",
            "args": [],
            "metadata": null,
            "name": "Foo",
            "directives": []
          }
        ]
      }
    ],
    "type": "User",
    "argumentDefinitions": [
      {
        "kind": "RootArgumentDefinition",
        "metadata": null,
        "name": "Cond",
        "type": "Boolean!"
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: enum-values.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query EnumValueQuery {
  me {
    profilePicture(preset: LARGE) {
      uri
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "EnumValueQuery",
    "argumentDefinitions": [],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [],
        "directives": [],
        "metadata": null,
        "name": "me",
        "selections": [
          {
            "kind": "LinkedField",
            "alias": null,
            "args": [
              {
                "kind": "Argument",
                "metadata": null,
                "name": "preset",
                "value": {
                  "kind": "Literal",
                  "metadata": null,
                  "value": "LARGE"
                },
                "type": "PhotoSize"
              }
            ],
            "directives": [],
            "metadata": null,
            "name": "profilePicture",
            "selections": [
              {
                "kind": "ScalarField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "uri",
                "type": "String"
              }
            ],
            "type": "Image"
          }
        ],
        "type": "User"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser matches expected output: enum-values.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query EnumValueQuery1 {
  me {
    profilePicture(preset: "LARGE") { # error: string not enum
      uri
    }
  }
}

query EnumValueQuery2 {
  me {
    profilePicture(preset: 128) { # error: int not enum
      uri
    }
  }
}

query EnumValueQuery3 {
  me {
    profilePicture(preset: [LARGE]) { # error: list of enum, not enum
      uri
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
ERROR:
Error: RelayParser: Encountered 3 error(s):
- Expected a value matching type 'PhotoSize'.
  
  GraphQL request (3:28)
  2:   me {
  3:     profilePicture(preset: "LARGE") { # error: string not enum
                                ^
  4:       uri
  
- Expected a value matching type 'PhotoSize'.
  
  GraphQL request (11:28)
  10:   me {
  11:     profilePicture(preset: 128) { # error: int not enum
                                 ^
  12:       uri
  
- Expected a value matching type 'PhotoSize'.
  
  GraphQL request (19:28)
  18:   me {
  19:     profilePicture(preset: [LARGE]) { # error: list of enum, not enum
                                 ^
  20:       uri
  
`;

exports[`RelayParser matches expected output: field-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query TestQuery {
  task(number: 123) {
    title
  }
  settings(environment: WEB) {
    notificationSounds
  }
  checkinSearchQuery(query: {query: "Relay"}) {
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "TestQuery",
    "argumentDefinitions": [],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "number",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": 123
            },
            "type": "Int"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "task",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "title",
            "type": "String"
          }
        ],
        "type": "Task"
      },
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environment",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": "WEB"
            },
            "type": "Environment"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "settings",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "notificationSounds",
            "type": "Boolean"
          }
        ],
        "type": "Settings"
      },
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": {
                "query": "Relay"
              }
            },
            "type": "CheckinSearchInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkinSearchQuery",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment TestFragment on User @argumentDefinitions(
  id: {type: "ID!"}
  size: {type: "[Int]", defaultValue: [100]}
) {
  profilePicture(size: $PictureSize) {
    uri
  }
  withDefaultArg: profilePicture(size: $size) {
    uri
  }
  ...Foo @arguments(localId: $id)
}

fragment Foo on User @argumentDefinitions(localId: {type: "ID!"}){
  id
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "TestFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "size",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "PictureSize",
              "type": "[Int]"
            },
            "type": "[Int]"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "profilePicture",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "uri",
            "type": "String"
          }
        ],
        "type": "Image"
      },
      {
        "kind": "LinkedField",
        "alias": "withDefaultArg",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "size",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "size",
              "type": "[Int]"
            },
            "type": "[Int]"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "profilePicture",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "uri",
            "type": "String"
          }
        ],
        "type": "Image"
      },
      {
        "kind": "FragmentSpread",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "localId",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "id",
              "type": null
            },
            "type": null
          }
        ],
        "metadata": null,
        "name": "Foo",
        "directives": []
      }
    ],
    "type": "User",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "id",
        "type": "ID!",
        "defaultValue": null
      },
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "size",
        "type": "[Int]",
        "defaultValue": [
          100
        ]
      },
      {
        "kind": "RootArgumentDefinition",
        "metadata": null,
        "name": "PictureSize",
        "type": "[Int]"
      }
    ]
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "Foo",
    "selections": [
      {
        "kind": "ScalarField",
        "alias": null,
        "args": [],
        "directives": [],
        "metadata": null,
        "name": "id",
        "type": "ID!"
      }
    ],
    "type": "User",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "localId",
        "type": "ID!",
        "defaultValue": null
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-literal-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on User {
  ...ChildFragment @arguments(pictureSize: [42])
}

fragment ChildFragment on User @argumentDefinitions(pictureSize: {type: "[Int]"}){
  profilePicture(size: $pictureSize) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ParentFragment",
    "selections": [
      {
        "kind": "FragmentSpread",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "pictureSize",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": [
                42
              ]
            },
            "type": "[Int]"
          }
        ],
        "metadata": null,
        "name": "ChildFragment",
        "directives": []
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ChildFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "size",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "pictureSize",
              "type": "[Int]"
            },
            "type": "[Int]"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "profilePicture",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "uri",
            "type": "String"
          }
        ],
        "type": "Image"
      }
    ],
    "type": "User",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "pictureSize",
        "type": "[Int]",
        "defaultValue": null
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-literal-enum-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on Query {
  mobile_settings: settings(environment: MOBILE) {
    cache_id
  }
  ...ChildFragment @arguments(environment: WEB)
}

fragment ChildFragment on Query @argumentDefinitions(environment: {type: "Environment!"}){
  settings(environment: $environment) {
    cache_id
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ParentFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": "mobile_settings",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environment",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": "MOBILE"
            },
            "type": "Environment"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "settings",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "cache_id",
            "type": "ID"
          }
        ],
        "type": "Settings"
      },
      {
        "kind": "FragmentSpread",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environment",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": "WEB"
            },
            "type": "Environment!"
          }
        ],
        "metadata": null,
        "name": "ChildFragment",
        "directives": []
      }
    ],
    "type": "Query",
    "argumentDefinitions": []
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ChildFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environment",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "environment",
              "type": "Environment"
            },
            "type": "Environment"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "settings",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "cache_id",
            "type": "ID"
          }
        ],
        "type": "Settings"
      }
    ],
    "type": "Query",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "environment",
        "type": "Environment!",
        "defaultValue": null
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-literal-enum-arguments-into-enum-list.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on User {
  mobile_checkins: checkins(environments: [MOBILE]) {
    query
  }
  ...ChildFragment @arguments(environments: WEB)
}

fragment ChildFragment on User @argumentDefinitions(environments: {type: "[Environment!]!"}){
  checkins(environments: $environments) {
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ParentFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": "mobile_checkins",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environments",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": [
                "MOBILE"
              ]
            },
            "type": "[Environment!]!"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkins",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      },
      {
        "kind": "FragmentSpread",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environments",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": "WEB"
            },
            "type": "[Environment!]!"
          }
        ],
        "metadata": null,
        "name": "ChildFragment",
        "directives": []
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ChildFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environments",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "environments",
              "type": "[Environment!]!"
            },
            "type": "[Environment!]!"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkins",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      }
    ],
    "type": "User",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "environments",
        "type": "[Environment!]!",
        "defaultValue": null
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-literal-enum-arguments-into-enum-list-indirect.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on User {
  mobile_checkins: checkins(environments: [MOBILE]) {
    query
  }
  ...ChildFragment @arguments(environment: WEB) # OK: matches defined type
}

fragment ChildFragment on User @argumentDefinitions(environment: {type: "Environment!"}){
  # variables of a non-list type cannot flow into list types,
  # the singular -> list promotion only works for literal values
  checkins(environments: $environment) { # expected error
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
ERROR:
Error: RelayParser: Encountered 1 error(s):
- Variable '$environment' was defined as type 'Environment!' but used in a location expecting the type '[Environment!]!'
  
  GraphQL request (8:53)
  7: 
  8: fragment ChildFragment on User @argumentDefinitions(environment: {type: "Environment!"}){
                                                         ^
  9:   # variables of a non-list type cannot flow into list types,
  
  GraphQL request (11:26)
  10:   # the singular -> list promotion only works for literal values
  11:   checkins(environments: $environment) { # expected error
                               ^
  12:     query
  
`;

exports[`RelayParser matches expected output: fragment-with-literal-enum-list-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on User {
  mobile_checkins: checkins(environments: [MOBILE]) {
    query
  }
  ...ChildFragment @arguments(environments: [WEB])
}

fragment ChildFragment on User @argumentDefinitions(environments: {type: "[Environment!]!"}){
  checkins(environments: $environments) {
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ParentFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": "mobile_checkins",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environments",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": [
                "MOBILE"
              ]
            },
            "type": "[Environment!]!"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkins",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      },
      {
        "kind": "FragmentSpread",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environments",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": [
                "WEB"
              ]
            },
            "type": "[Environment!]!"
          }
        ],
        "metadata": null,
        "name": "ChildFragment",
        "directives": []
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ChildFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "environments",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "environments",
              "type": "[Environment!]!"
            },
            "type": "[Environment!]!"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkins",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      }
    ],
    "type": "User",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "environments",
        "type": "[Environment!]!",
        "defaultValue": null
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-literal-object-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on Query {
  mobile_checkins: checkinSearchQuery(query: {query: "mobile"}) {
    query
  }
  ...ChildFragment @arguments(query: {query: "web"})
}

fragment ChildFragment on Query @argumentDefinitions(query: {type: "CheckinSearchInput!"}){
  checkinSearchQuery(query: $query) {
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ParentFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": "mobile_checkins",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": {
                "query": "mobile"
              }
            },
            "type": "CheckinSearchInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkinSearchQuery",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      },
      {
        "kind": "FragmentSpread",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": {
                "query": "web"
              }
            },
            "type": "CheckinSearchInput!"
          }
        ],
        "metadata": null,
        "name": "ChildFragment",
        "directives": []
      }
    ],
    "type": "Query",
    "argumentDefinitions": []
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ChildFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "query",
              "type": "CheckinSearchInput"
            },
            "type": "CheckinSearchInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkinSearchQuery",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      }
    ],
    "type": "Query",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "query",
        "type": "CheckinSearchInput!",
        "defaultValue": null
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-literal-object-list-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on Query {
  mobile_checkins: checkinSearchQuery(query: {query: "mobile"}) {
    query
  }
  ...ChildFragment @arguments(inputs: [{query: "web"}])
}

fragment ChildFragment on Query @argumentDefinitions(inputs: {type: "[CheckinSearchInput!]!"}){
  checkinSearchQuery(query: {query: "foo", inputs: $inputs}) {
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ParentFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": "mobile_checkins",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": {
                "query": "mobile"
              }
            },
            "type": "CheckinSearchInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkinSearchQuery",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      },
      {
        "kind": "FragmentSpread",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "inputs",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": [
                {
                  "query": "web"
                }
              ]
            },
            "type": "[CheckinSearchInput!]!"
          }
        ],
        "metadata": null,
        "name": "ChildFragment",
        "directives": []
      }
    ],
    "type": "Query",
    "argumentDefinitions": []
  },
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ChildFragment",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "ObjectValue",
              "metadata": null,
              "fields": [
                {
                  "kind": "ObjectFieldValue",
                  "metadata": null,
                  "name": "query",
                  "value": {
                    "kind": "Literal",
                    "metadata": null,
                    "value": "foo"
                  }
                },
                {
                  "kind": "ObjectFieldValue",
                  "metadata": null,
                  "name": "inputs",
                  "value": {
                    "kind": "Variable",
                    "metadata": null,
                    "variableName": "inputs",
                    "type": "[CheckinSearchInput]"
                  }
                }
              ]
            },
            "type": "CheckinSearchInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkinSearchQuery",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      }
    ],
    "type": "Query",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "inputs",
        "type": "[CheckinSearchInput!]!",
        "defaultValue": null
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: fragment-with-undefined-literal-arguments.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ParentFragment on User {
  ...ChildFragment @arguments(pictureSize: 42) # error: $pictureSize not defined
}

fragment ChildFragment on User {
  profilePicture(size: $pictureSize) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
ERROR:
Error: RelayParser: Encountered 1 error(s):
- Literal @arguments values are only supported when the argument is defined with @argumentDefinitions. Check the definition of fragment 'ChildFragment'.
  
  GraphQL request (2:44)
  1: fragment ParentFragment on User {
  2:   ...ChildFragment @arguments(pictureSize: 42) # error: $pictureSize not defined
                                                ^
  3: }
  
  GraphQL request (5:1)
  4: 
  5: fragment ChildFragment on User {
     ^
  6:   profilePicture(size: $pictureSize) {
  
`;

exports[`RelayParser matches expected output: inline-untyped-fragment.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment InlineUntypedFragment on User {
  ... {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "InlineUntypedFragment",
    "selections": [
      {
        "kind": "InlineFragment",
        "directives": [],
        "metadata": null,
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "name",
            "type": "String"
          }
        ],
        "typeCondition": "User"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: linked-handle-field.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends(first: 10) @__clientField(handle: "clientFriends") @__clientField(handle: "otherFriends") {
    count
  }  
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "LinkedHandleField",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "first",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": 10
            },
            "type": "Int"
          }
        ],
        "directives": [],
        "handles": [
          {
            "name": "clientFriends",
            "key": "",
            "filters": null
          },
          {
            "name": "otherFriends",
            "key": "",
            "filters": null
          }
        ],
        "metadata": null,
        "name": "friends",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "count",
            "type": "Int"
          }
        ],
        "type": "FriendsConnection"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: linked-handle-field-with-filters.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends(first: 10, orderby: $orderby) @__clientField(handle: "clientFriends", filters: ["first", "orderby"]) {
    count
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "LinkedHandleField",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "first",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": 10
            },
            "type": "Int"
          },
          {
            "kind": "Argument",
            "metadata": null,
            "name": "orderby",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "orderby",
              "type": "[String]"
            },
            "type": "[String]"
          }
        ],
        "directives": [],
        "handles": [
          {
            "name": "clientFriends",
            "key": "",
            "filters": [
              "first",
              "orderby"
            ]
          }
        ],
        "metadata": null,
        "name": "friends",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "count",
            "type": "Int"
          }
        ],
        "type": "FriendsConnection"
      }
    ],
    "type": "User",
    "argumentDefinitions": [
      {
        "kind": "RootArgumentDefinition",
        "metadata": null,
        "name": "orderby",
        "type": "[String]"
      }
    ]
  }
]
`;

exports[`RelayParser matches expected output: linked-handle-field-with-key.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends(first: 10) @__clientField(handle: "clientFriends", key: "LinkedHandleField_friends") {
    count
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "LinkedHandleField",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "first",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": 10
            },
            "type": "Int"
          }
        ],
        "directives": [],
        "handles": [
          {
            "name": "clientFriends",
            "key": "LinkedHandleField_friends",
            "filters": null
          }
        ],
        "metadata": null,
        "name": "friends",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "count",
            "type": "Int"
          }
        ],
        "type": "FriendsConnection"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: linked-handle-filter.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment LinkedHandleField on User {
  friends(first: 10) @__clientField(handle: "clientFriends", filters: ["first"]) @__clientField(handle: "otherFriends") {
    count
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "LinkedHandleField",
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "first",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": 10
            },
            "type": "Int"
          }
        ],
        "directives": [],
        "handles": [
          {
            "name": "clientFriends",
            "key": "",
            "filters": [
              "first"
            ]
          },
          {
            "name": "otherFriends",
            "key": "",
            "filters": null
          }
        ],
        "metadata": null,
        "name": "friends",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "count",
            "type": "Int"
          }
        ],
        "type": "FriendsConnection"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: list-argument.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query ListArgumentQuery($waypoint: WayPoint!) {
  route(waypoints: [$waypoint, {
    lat: "0.0"
    lon: "0.0"
  }]) {
    steps {
      note
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "ListArgumentQuery",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "waypoint",
        "type": "WayPoint!",
        "defaultValue": null
      }
    ],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "waypoints",
            "value": {
              "kind": "ListValue",
              "metadata": null,
              "items": [
                {
                  "kind": "Variable",
                  "metadata": null,
                  "variableName": "waypoint",
                  "type": "WayPoint!"
                },
                {
                  "kind": "Literal",
                  "metadata": null,
                  "value": {
                    "lat": "0.0",
                    "lon": "0.0"
                  }
                }
              ]
            },
            "type": "[WayPoint!]!"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "route",
        "selections": [
          {
            "kind": "LinkedField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "steps",
            "selections": [
              {
                "kind": "ScalarField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "note",
                "type": "String"
              }
            ],
            "type": "[RouteStep]"
          }
        ],
        "type": "Route"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser matches expected output: list-of-enums.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment TestFragment on User {
  traits # This is a list of enums.
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "TestFragment",
    "selections": [
      {
        "kind": "ScalarField",
        "alias": null,
        "args": [],
        "directives": [],
        "metadata": null,
        "name": "traits",
        "type": "[PersonalityTraits]"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: literal-list-argument.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query LiteralListArgumentQuery {
  route(waypoints: [{
    lat: "0.0"
    lon: "0.0"
  }]) {
    steps {
      note
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "LiteralListArgumentQuery",
    "argumentDefinitions": [],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "waypoints",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": [
                {
                  "lat": "0.0",
                  "lon": "0.0"
                }
              ]
            },
            "type": "[WayPoint!]!"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "route",
        "selections": [
          {
            "kind": "LinkedField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "steps",
            "selections": [
              {
                "kind": "ScalarField",
                "alias": null,
                "args": [],
                "directives": [],
                "metadata": null,
                "name": "note",
                "type": "String"
              }
            ],
            "type": "[RouteStep]"
          }
        ],
        "type": "Route"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser matches expected output: literal-list-argument.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query LiteralListArgumentQuery1 {
  route(waypoints: [{
    lat: 0.0 # error: float not string
    lon: "0.0"
  }]) {
    steps {
      note
    }
  }
}

query LiteralListArgumentQuery2 {
  route(waypoints: ["waypoint"]) { # error: string not input object
    steps {
      note
    }
  }
}

query LiteralListArgumentQuery3 {
  route(waypoints: "waypoint") { # error: string not list
    steps {
      note
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
ERROR:
Error: RelayParser: Encountered 3 error(s):
- Expected a value matching type 'String'.
  
  GraphQL request (3:10)
  2:   route(waypoints: [{
  3:     lat: 0.0 # error: float not string
              ^
  4:     lon: "0.0"
  
- Expected a value matching type 'WayPoint!'.
  
  GraphQL request (13:21)
  12: query LiteralListArgumentQuery2 {
  13:   route(waypoints: ["waypoint"]) { # error: string not input object
                          ^
  14:     steps {
  
- Expected a value matching type 'WayPoint!'.
  
  GraphQL request (21:20)
  20: query LiteralListArgumentQuery3 {
  21:   route(waypoints: "waypoint") { # error: string not list
                         ^
  22:     steps {
  
`;

exports[`RelayParser matches expected output: literal-object-argument.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query LiteralObjectArgument {
  checkinSearchQuery(query: {
    query: "Facebook"
  }) {
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "LiteralObjectArgument",
    "argumentDefinitions": [],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": {
                "query": "Facebook"
              }
            },
            "type": "CheckinSearchInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkinSearchQuery",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser matches expected output: literal-object-argument.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query LiteralObjectArgument1 {
  checkinSearchQuery(query: {
    unknownField: "Facebook" # error: unknown field
  }) {
    query
  }
}

query LiteralObjectArgument2 {
  checkinSearchQuery(query: {
    query: FACEBOOK # error: enum not string
  }) {
    query
  }
}

query LiteralObjectArgument3 {
  checkinSearchQuery(query: FACEBOOK) { # error: enum not object
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
ERROR:
Error: RelayParser: Encountered 3 error(s):
- Uknown field 'unknownField' on type 'CheckinSearchInput'.
  
  GraphQL request (3:5)
  2:   checkinSearchQuery(query: {
  3:     unknownField: "Facebook" # error: unknown field
         ^
  4:   }) {
  
- Expected a value matching type 'String'.
  
  GraphQL request (11:12)
  10:   checkinSearchQuery(query: {
  11:     query: FACEBOOK # error: enum not string
                 ^
  12:   }) {
  
- Expected a value matching type 'CheckinSearchInput'.
  
  GraphQL request (18:29)
  17: query LiteralObjectArgument3 {
  18:   checkinSearchQuery(query: FACEBOOK) { # error: enum not object
                                  ^
  19:     query
  
`;

exports[`RelayParser matches expected output: null-values.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query NullValuesQuery {
  items(filter: { date: null }) {
    date
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "NullValuesQuery",
    "argumentDefinitions": [],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "filter",
            "value": {
              "kind": "Literal",
              "metadata": null,
              "value": {
                "date": null
              }
            },
            "type": "ItemFilterInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "items",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "date",
            "type": "String"
          }
        ],
        "type": "ItemFilterResult"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser matches expected output: null-values.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query NullValuesQuery {
  node_id_required(id: null) {
    id
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
ERROR:
Error: RelayParser: Encountered 1 error(s):
- Expected a value matching type 'ID!'.
  
  GraphQL request (2:24)
  1: query NullValuesQuery {
  2:   node_id_required(id: null) {
                            ^
  3:     id
  
`;

exports[`RelayParser matches expected output: object-argument.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query ObjectArgument($text: String!) {
  checkinSearchQuery(query: {
    query: $text
  }) {
    query
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "ObjectArgument",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "text",
        "type": "String!",
        "defaultValue": null
      }
    ],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": null,
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "query",
            "value": {
              "kind": "ObjectValue",
              "metadata": null,
              "fields": [
                {
                  "kind": "ObjectFieldValue",
                  "metadata": null,
                  "name": "query",
                  "value": {
                    "kind": "Variable",
                    "metadata": null,
                    "variableName": "text",
                    "type": "String"
                  }
                }
              ]
            },
            "type": "CheckinSearchInput"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "checkinSearchQuery",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "query",
            "type": "String"
          }
        ],
        "type": "CheckinSearchResult"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser matches expected output: scalar-handle-field.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ScalarHandleField on User {
  name @__clientField(handle: "clientName") @__clientField(handle: "clientName2")
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "ScalarHandleField",
    "selections": [
      {
        "kind": "ScalarField",
        "alias": null,
        "args": [],
        "directives": [],
        "handles": [
          {
            "name": "clientName",
            "key": "",
            "filters": null
          },
          {
            "name": "clientName2",
            "key": "",
            "filters": null
          }
        ],
        "metadata": null,
        "name": "name",
        "type": "String"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: simple-fragment.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment TestFragment on User {
  id
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Fragment",
    "directives": [],
    "metadata": null,
    "name": "TestFragment",
    "selections": [
      {
        "kind": "ScalarField",
        "alias": null,
        "args": [],
        "directives": [],
        "metadata": null,
        "name": "id",
        "type": "ID!"
      }
    ],
    "type": "User",
    "argumentDefinitions": []
  }
]
`;

exports[`RelayParser matches expected output: simple-query.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query TestQuery($id: ID!) {
  foo: node(id: $id) {
    id
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
[
  {
    "kind": "Root",
    "operation": "query",
    "metadata": null,
    "name": "TestQuery",
    "argumentDefinitions": [
      {
        "kind": "LocalArgumentDefinition",
        "metadata": null,
        "name": "id",
        "type": "ID!",
        "defaultValue": null
      }
    ],
    "directives": [],
    "selections": [
      {
        "kind": "LinkedField",
        "alias": "foo",
        "args": [
          {
            "kind": "Argument",
            "metadata": null,
            "name": "id",
            "value": {
              "kind": "Variable",
              "metadata": null,
              "variableName": "id",
              "type": "ID"
            },
            "type": "ID"
          }
        ],
        "directives": [],
        "metadata": null,
        "name": "node",
        "selections": [
          {
            "kind": "ScalarField",
            "alias": null,
            "args": [],
            "directives": [],
            "metadata": null,
            "name": "id",
            "type": "ID!"
          }
        ],
        "type": "Node"
      }
    ],
    "type": "Query"
  }
]
`;

exports[`RelayParser should error when parsing fragment that references undeclared variables are used with differing types 1`] = `
"RelayParser: Encountered 1 error(s):
- Variable '$id' was used in locations expecting the conflicting types 'ID' and 'Int'. Source: document \`TestFragment\` file: \`GraphQL request\`
  
  GraphQL request (2:14)
  1: fragment TestFragment on Query {
  2:     node(id: $id) {
                  ^
  3:       id
  
  GraphQL request (5:18)
  4:     }
  5:     task(number: $id) {
                      ^
  6:       title
  "
`;
